--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_add_recipe">AddRecipeActivity</string>
+    <string name="name">Rheza Firmandha</string>
+    <string name="stepMakanan">Step Makanan</string>
 </resources>
